# ps2env

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.base  Dockerfile.game  build_image.py  pyproject.toml  test_run.py
configs/: config.toml  env_basic.toml  smoke.toml
docker/: entrypoint.sh
docs/: README.md  design.md  implementation-plan.md  plan.md  test-run.md
docs/pcsx2/: native-control-findings.md  native-control-plan.md
ps2env/: __init__.py  action_runtime.py  capture.py  config.py  controller_mapping.py  env.py  env_runtime.py  env_types.py  gpu.py  hooks.py  input.py  logging_utils.py  module_loading.py  pcsx2.py  pine.py  policy_runtime.py  session.py  smoke_runtime.py  test_run_common.py  test_run_runtime.py  worker.py  xdummy.py
scripts/: build-base-image.sh  build-game-image.sh  build-image.sh  build-pcsx2-appimage.sh  install-nvidia-display-driver.sh  run-env.sh  run-game.sh
user_env/basic_ps2/: env_utils.py
user_env/basic_ps2/callbacks/: noop.py
user_env/basic_ps2/checks/: episode_ready.py  step_limit.py
user_env/basic_ps2/policy/: init_policy.py  reset_policy.py  step_policy.py
