[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ps2env"
version = "0.1.0"
description = "Smoke-runtime bring-up for multi-worker PCSX2 execution in Docker."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "Pillow>=10.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ps2env*"]
