[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ps2env"
version = "0.1.0"
description = "PS2Env lifecycle testing and PCSX2-backed runtime utilities."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "Pillow>=10.0",
  "python-xlib>=0.33",
  "tomli>=2.0.1; python_version < '3.11'",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ps2env*"]
